@@ -1,3 +1,11 @@
 
 <title>Compiling LilyPond from source</title>
 
+<h2>Warning</h2>
+
+Compiling from source is a tricky process. If possible, use a binary
+release. If there is no release for your platform, and you managed to
+build LilyPond, please consider releasing a binary package for your
+platform.
+
+
